# radar

./: .gitignore  README.md  config.py  diff.py  main.py  price_config.py  price_main.py  pyproject.toml  requirements.txt  run.py  state.py
.github/: dependabot.yml
.github/workflows/: ci.yml  prices.yml  radar.yml
alerts/: formatter.py  pushover.py
discoverers/: link_text.py
extractors/: barclaycard.py  hsbc.py  special_offer.py  update_date.py
monitors/: barclaycard.py  base.py  page_monitor.py
scripts/: check_hsbc_conclusion.py  check_pushover.py
storage/: snapshots.json
storage/history/: barclaycard.jsonl  hsbc.jsonl  scrumbles_turkey_2kg.jsonl
tests/: test_barclaycard.py  test_change_detector.py  test_formatter.py  test_special_offer.py  test_update_date.py
trackers/: change_detector.py  history.py
