[project]
name = "radar"
version = "0.1.0"
description = "Automated web monitoring and notification system"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "beautifulsoup4>=4.15.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[project.scripts]
radar = "radar.main:main"
